# AstranceR

./: Cargo.toml  Makefile
.cargo/: config.toml
src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
