[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } 
bitflags = "2.8.0"
num_enum = { version = "0.7.3", default-features = false }

[profile.release]
debug = true
opt-level = 0

# [features]
# board_qemu = []
# board_k210 = []
