[package]
name = "user_lib"
version = "0.1.0"
authors = ["Xichen <zeexoc@outlook.com>"]
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.13.0"
bitflags = "2.8.0"
num_enum = { version = "0.7.3", default-features = false }

[profile.release]
debug = true
opt-level = 0

# [features]
# board_qemu = []
# board_k210 = []
